refactor: Foi realizado modificação para o codigo só rodar se a char a janela correta e refatoração na forma de carregar as imagens do projeto.

--- a/EldenMacroFarm/EldenMacroFarm.csproj
+++ b/EldenMacroFarm/EldenMacroFarm.csproj
@@ -6,10 +6,17 @@
         <Nullable>enable</Nullable>
         <UseWindowsForms>true</UseWindowsForms>
         <ImplicitUsings>enable</ImplicitUsings>
+        <ApplicationIcon>img/icone.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="WindowsInput" Version="6.4.1" />
+        <PackageReference Include="WindowsInput" Version="6.4.1"/>
+        <None Update="img\*.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="img\*.ico">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
